Revision history for PDL-Stats

0.6.3   01/17/2013
        binomial_test() bug fix -- [rt.cpan.org #82725]

0.6.2   04/29/2012
        Windows pdldoc database install fix.

0.6.1   04/24/2012
        Bails out of installation if running under perl 5.15.0 to 5.15.8 but allows --force to attempt a build regardless.

0.6.0   04/08/2012
        Added group_by() method in Basic.pm.
        Updates pdl doc database.
        Bails out of installation if running under perl 5.14.0 to 5.15.8.
        Removed old deprecated method get_data() from Basic.pm
        Moved no slatec warning from module to test. Removed lvalue assignments from tests.

0.5.5   04/22/2011
        GLM Windows 32-bit test bug fix; GLM quits installation with PDL-2.4.7 warning. Documentation update.

0.5.4   04/19/2011
        GLM pca() and plot_scores() can do cov version.
        [rt.cpan.org #67557] Undo PREREQ_FATAL => 1 in Makefile.PL.

0.5.3   04/18/2011
        stats_glm.t pca() test SLATEC vs. MatrixOps precision fix.

0.5.2   04/17/2011
        stats_glm.t pca() test precision fix.

0.5.1   04/16/2011
        ***GLM pca() return value names updated*** to be more compatible with the literature.
        GLM added plot_scores(); plot_scree() name changed to plot_screes() for consistency across plotting functions.
        Updated plotting functions to default to png in Windows because GW doesn't reopen after close.

0.5.0	04/02/2011
		Updated tests to use __DATA__ instead of separate test data files.
		GLM added interaction_code(); bug fix for dummy_code().
		GLM added ols_rptd()!
        GLM added plot_residual().
		GLM eval wrapped optional modules; replaced perl reverse sort with slice (-1:0).
        Basic added binomial_test().
        TS updated plot_season() to season_m(); deprecated a few old function names, filt_exp(), filt_ma(), and dsea().

0.4.3	04/08/2010
		Distr::plot_distr() bug fix.
		Kmeans::kmeans() pod update.

0.4.2	03/27/2010