@@ -2,6 +2,7 @@ Revision history for PDL-Stats
 
 0.6.3   01/17/2013
         binomial_test() bug fix -- [rt.cpan.org #82725]
+		pmf_poisson function updated to handle large input values thanks to David Mertens.
 
 0.6.2   04/29/2012
         Windows pdldoc database install fix.
